--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-click==6.7
-Flask==0.12.3
-itsdangerous==0.24
-Jinja2==2.10
-MarkupSafe==1.0
-peewee==3.2.2
-psycopg2-binary==2.7.4
-Werkzeug==0.14.1
+Click==7.0
+Flask==1.1.1
+gunicorn==20.0.4
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
+passlib==1.7.2
+peewee==3.13.1
+psycopg2-binary==2.8.4
+Werkzeug==1.0.0
